added start command to Makefile

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -129,3 +129,6 @@ clean:
 	@find . -type d -name "__pycache__" -exec rm -rf {} + 2>/dev/null || true
 	@find . -type f -name "*.pyc" -delete
 	@echo "✓ Cleanup complete"
+
+start:
+	uv run uvicorn src.main:app --reload --host 0.0.0.0 --port 8000
