--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.10
+          python-version: "3.10"
 
       - name: flake8 Link
         uses: py-actions/flake8@v2
