--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -14,13 +19,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          cd backend
+          uv sync
 
       - name: Run tests with coverage
         run: |
           cd backend
-          pytest --cov=app tests/
+          uv run pytest --cov=app tests/
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
