--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "passlib[bcrypt]>=1.7.4",
     "bcrypt>=4.0.0,<5.0.0",
     "python-multipart>=0.0.17",
+    "pytest>=9.0.1",
 ]
 
 [project.optional-dependencies]
