--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,29 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: testuser
+          POSTGRES_PASSWORD: testpass
+          POSTGRES_DB: public_square_test
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+    env:
+      DATABASE_URL: postgresql+asyncpg://testuser:testpass@localhost:5432/public_square
+      TEST_DATABASE_URL: postgresql+asyncpg://testuser:testpass@localhost:5432/public_square_test
+      SECRET_KEY: test-secret-key-for-ci-only-not-for-production
+      ALGORITHM: HS256
+      ACCESS_TOKEN_EXPIRE_MINUTES: 30
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -22,10 +45,15 @@ jobs:
           cd backend
           uv sync
 
+      - name: Run database migrations
+        run: |
+          cd backend
+          make migrate
+
       - name: Run tests with coverage
         run: |
           cd backend
-          uv run pytest --cov=app tests/
+          uv run pytest --cov=src tests/
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
