--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
         env:
           POSTGRES_USER: testuser
           POSTGRES_PASSWORD: testpass
-          POSTGRES_DB: public_square_test
+          POSTGRES_DB: postgres
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -20,7 +20,7 @@ jobs:
           - 5432:5432
 
     env:
-      DATABASE_URL: postgresql+asyncpg://testuser:testpass@localhost:5432/public_square
+      DATABASE_URL: postgresql+asyncpg://testuser:testpass@localhost:5432/public_square_test
       TEST_DATABASE_URL: postgresql+asyncpg://testuser:testpass@localhost:5432/public_square_test
       SECRET_KEY: test-secret-key-for-ci-only-not-for-production
       ALGORITHM: HS256
@@ -45,10 +45,11 @@ jobs:
           cd backend
           uv sync
 
-      - name: Run database migrations
+      - name: Create test database
         run: |
-          cd backend
-          make migrate
+          PGPASSWORD=testpass psql -h localhost -U testuser -d postgres -c "CREATE DATABASE public_square_test;"
+        env:
+          PGPASSWORD: testpass
 
       - name: Run tests with coverage
         run: |
