--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,10 @@ jobs:
 
             - name: Backend tests
               working-directory: ./backend
+              env:
+                  DATABASE_URL: postgresql+asyncpg://test:test@localhost/test_db
+                  TEST_DATABASE_URL: postgresql+asyncpg://test:test@localhost/test_db
+                  SECRET_KEY: test-secret-key-for-ci
               run: |
                   uv sync --all-extras --dev
                   uv run pytest
