--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -12,5 +12,8 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: flake8 Link
-        uses: py-actions/flake8@v2
+      - name: Install flake8
+        run: pip install flake8
+
+      - name: Run flake8 on backend
+        run: flake8 backend/
