--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -10,8 +10,9 @@ addopts =
     --cov=src
     --cov-report=term-missing
     --cov-report=html
-    --cov-fail-under=80
+    --cov-fail-under=60
 markers =
     unit: Unit tests
     integration: Integration tests
     slow: Slow running tests
+    selenium: Selenium end-to-end tests
