--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,4 +27,6 @@ dev = [
     "pytest-cov>=6.0.0",
     "httpx>=0.28.0",
     "flake8>=7.1.0",
+    "selenium>=4.38.0",
+    "webdriver-manager>=4.0.0",
 ]
